@@ -148,6 +148,8 @@ enum ScanFormatError
 	SCAN_FORMAT_ERROR_ZEROS		= 3,
 	SCAN_FORMAT_ERROR_TOOSHORT	= 4,
 	SCAN_FORMAT_ERROR_UNSUPPORTED	= 5,
+	SCAN_FORMAT_ERROR_FILLPATTERN	= 6,
+	SCAN_FORMAT_ERROR_REPEAT	= 7,	/* if the same 32 or 64-bit pattern repeats in the payload */
 	SCAN_FORMAT_ERROR_SCANNUMRANGE	= 8,
 	NUM_SCAN_FORMAT_ERRORS
 };
